--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table cellspacing="10">
         <tr>
             <td>
-                <img src="images/fotor_2023-2-6_3_27_53.png" >
+                <img src="images/fotor_2023-2-6_3_27_53.png" alt "Omar's Photo">
             </td>
             <td>
                <h1> Omar Alawi Mohammed Al Anbasah</h1>
